# cobol-it-4.1.1_2019-07-04

./: ABOUT-NLS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  build.patchversion  checkmd5  cob-config.in  cobsetjmp.h  config.h.in  configcit.sh  configure  configure.ac  cpucheck.c  globaldefine.h  libcob.h  tarstamp.h  updatectree.sh  version.sh
cobc/: ChangeLog  Makefile.am  Makefile.in  cobc.c  cobc.h  codegen.c  config.c  config.def  enterprise.c  error.c  field.c  flag.def  longopt.def  parser.c  parser.h  parser.y  pplex.c  pplex.l  ppparse.c  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  tree.c  tree.h  typeck.c  warning.def
config/: Makefile.am  Makefile.in  cobol2002.conf  cobol85.conf  db2api.symb  default.conf  ibm.conf  ingres.symb  isam.conf  mf.conf  mqseries.symb  mvs.conf  oracle.symb  oraclewin.symb  os370.conf  rmcobol.conf  static.symb  staticwin.symb  tuxedo.symb  tuxedowin.symb
copy/: Makefile.am  Makefile.in  XFHFCD.CPY  screenio.cpy  xfhfcd2.cpy  xfhfcd3.cpy
lib/: Makefile.am  Makefile.in  cit_getopt.c  cit_getopt.h
libcitenterprise/: Makefile.am  Makefile.in  citenterprise_runtime.c  citenterprise_runtime.h  optimizer.c
libcob/: ChangeLog  Makefile.am  Makefile.in  branchlut.c  call.c  call.h  cit_extsm.c  cit_rtinterface.h  cit_types.h  cit_types.h.in  citdb2.c  citenterprise.h  cittuxedo.c  cob_decimal.h  coblocal.h  cobqsort.c  codegen.h  common.c  common.h  debug.h  exception.def  fileio.c  fileio.h  gen_oper.h  grisu.c  grisu.h  intrinsic.c  intrinsic.h  mf_extfh.h  move.c  move.h  numeric.c  numeric.h  readdir_win.h  screenio.c  screenio.h  strings.c  strings.h  stringutils.c  stringutils.h  (+3 more)
libcob/enterprise/: a2e.c  a2e.h  citbigint.c  citbigint.h  citenterprise.c  citenterprise.h  citkey.c  citkey.h  debug.c  debug.h  debugdb.c  debugdb.h  e4c.c  e4c.h  mf_extfh.c  mf_extfh.h  newmeta.c  newmeta.h  sha1.c  sha1.h  xmlb.c  xmlb.h  xmlbu.h
libcob/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzguts.h  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
m4/: libtool.m4
samples/: Makefile.am  Makefile.in
samples/customer/: .project  customer0.cbl
samples/screens/: .project  screen2.cob
samples/test/: .project  test1.cbl
test/: ChangeLog  Makefile.am  Makefile.in  all-test-O.sh  all-test.sh  atlocal.in  data-rep  data-rep.at  package.m4  run  run.at  syntax  syntax.at
test/cobol85/: Makefile.am  Makefile.in  README  expand.pl  report.pl  summary.pl
test/data-rep.src/: TSTMFC5.cbl  binary.at  compute.at  display.at  isam.at  numeric-ns-dump.cob  packed.at  pointer.at
test/data-rep.src/isam/: RELFIX.cob  SEQLINE.cob  SEQVAR.cob  VSAMFIX.cob  VSAMVAR.cob  stockcli.cms  test1.cbl  test2.cbl
test/run.src/: accept.at  extensions.at  functions.at  fundamental.at  initialize.at  misc.at  numeric.at  ref-mod.at  return-code.at  subscripts.at
test/syntax.src/: copy.at  definition.at  expression.at  move.at  multiply.at  occurs.at  redefines.at  set.at  subscripts.at  value.at
