bin_SCRIPTS=cob-config

EXTERNAL_TARS=external/vbisam-2.1.1.tar.gz 

include_HEADERS = libcob.h cobsetjmp.h

SUBDIRS = lib libcob 

ACLOCAL_AMFLAGS = -I m4
BUILT_SOURCES = defaults.h
DISTCLEANFILES = $(BUILT_SOURCES) cpucheck
EXTRA_DIST =  m4/libtool.m4  m4/lt~obsolete.m4  \
        m4/ltoptions.m4  m4/ltsugar.m4  m4/ltversion.m4 \
        cpucheck.c COPYING.DOC configcit.sh builddist.sh  build.patchversion \
		version.sh version model distribution ylwrap \
		globaldefine.h \
		$(EXTERNAL_TARS) \
		checkmd5 \
		packages/rpm_standard.spec updatectree.sh doc/Licenses.zip


dist-hook:
	echo "static char octardate[] = \"`date`\";" > $(distdir)/tarstamp.h
	-find $(distdir) $$LOCAL_FIND_OPT -type d -print | xargs chmod 777
	touch $(distdir)/cobc/parser.c
	touch $(distdir)/cobc/ppparser.c
	touch $(distdir)/cobc/scanner.c
	touch $(distdir)/cobc/pplex.c
	chmod 644 $(distdir)/cpucheck.c
	chmod 644 $(distdir)/cob-config.in
	chmod 644 $(distdir)/ABOUT-NLS
	chmod 644 $(distdir)/AUTHORS
	chmod 644 $(distdir)/COPYING
	chmod 644 $(distdir)/COPYING.DOC
	chmod 644 $(distdir)/COPYING.LIB
	chmod 644 $(distdir)/INSTALL
	chmod 644 $(distdir)/NEWS
	chmod 644 $(distdir)/README
	chmod 644 $(distdir)/THANKS
	chmod 644 $(distdir)/TODO
	chmod 755 $(distdir)/ltmain.sh
	chmod 755 $(distdir)/missing
	chmod 755 $(distdir)/install-sh
	chmod 755 $(distdir)/config.guess
	chmod 755 $(distdir)/config.sub
	chmod 755 $(distdir)/config.rpath
	chmod 755 $(distdir)/depcomp
	chmod +x $(distdir)/bin/citprocob.sh
	chmod +x $(distdir)/checkmd5


defaults.h: Makefile.am $(top_builddir)/config.status version
	@echo "Creating defaults.h..."
	@{								\
	  echo "/* Automatically generated by Makefile */";		\
	  echo "#define COB_CC           \"$(COB_CC)\"";		\
	  echo "#define COB_AR           \"$(COB_AR)\"";		\
	  echo "#define COB_CFLAGS       \"$(COB_CFLAGS)\"";		\
	  echo "#define COB_OPTIMIZE_FLAG \"$(COB_OPTIMIZE_FLAG)\"";	\
	  echo "#define COB_OPTSIZE_FLAG \"$(COB_OPTSIZE_FLAG)\"";	\
	  echo "#define COB_ARFLAGS      \"$(COB_ARFLAGS)\"";		\
	  echo "#define COB_LDFLAGS      \"$(COB_LDFLAGS)\"";		\
	  echo "#define COB_LIBS         \"$(COB_LIBS)\"";		\
	  echo "#define COB_LIBISAM      \"$(COB_LIBISAM)\"";		\
	  echo "#define COB_LIBS_DIR     \"$(COB_LIBS_DIR)\"";		\
	  echo "#define COB_CONFIG_DIR   \"$(COB_CONFIG_DIR)\"";	\
	  echo "#define COB_COPY_DIR     \"$(COB_COPY_DIR)\"";		\
	  echo "#define COB_PACKAGE      \"@PACKAGE@\"";		\
	  echo "#define COB_PLATFORM     \"@PLATFORM@\"";		\
	  echo "#define COB_LIBRARY_PATH \"$(COB_LIBRARY_PATH)\"";	\
	  echo "#define COB_MODULE_EXT   \"$(COB_MODULE_EXT)\"";	\
	  echo "#define LOCALEDIR        \"$(datadir)/locale\"";	\
	  echo "#define COB_BASEDIR      \"$(prefix)\"";         \
	  echo "#define COB_PN_COMPILER  \"COMPILER\"";			\
	  echo "#define COB_PN_SYNTAX    \"SYNTAX-ONLY\"";			\
	  echo "#define COB_PN_RUNTIME   \"RUNTIME\"";			\
	  echo "#define COB_PN_IDE       \"IDE\"";			\
	  echo "#define COB_PN_SQL       \"SQL\"";			\
	  echo "#define COB_VERSION      \"`cat version `\"";           \
	  } > defaults.h
	@echo "Creating VC/VCVersion.h..."
	-@mkdir VC
	@{								\
	  echo "/* Automatically generated by Makefile */";		\
	  echo "#define PACKAGE_VERSION      \"@PACKAGE_VERSION@\"";	\
	  echo "#define PACKAGE_STRING       \"@PACKAGE_STRING@\"";	\
	  echo "#define COB_VERSION      \"`cat version `\"";           \
      echo "#define COB_MINIMAL_MINOR_VERSION @COB_MINIMAL_MINOR_VERSION@"; \
	} > VC/VCVersion.h

cit-bin-dist:	
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)
	-mkdir /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)
	-mkdir ${prefix}/doc
	-cp checkmd5 ${prefix}/
	-chmod +x ${prefix}/checkmd5
	rm -rf ${prefix}/docs/*
	rm -rf ${prefix}/doc/*
	rm -rf ${prefix}/info
	rm -rf ${prefix}/man
	rm -rf ${prefix}/share/doc
	rm -rf ${prefix}/share/man
	rm -rf ${prefix}/*.md5
	rm -rf ${prefix}/ctree
	rm -f  ${prefix}/bin/core.*
	-cd ${prefix} && bin/md5deep -k -l -r bin lib share > /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).md5 
	cp /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).md5  ${prefix}
	chmod -w ${prefix}/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).md5
	cp doc/Licenses.zip ${prefix}/doc
	cd ${prefix}/.. && tar cvf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).tar `basename ${prefix}`
	cd /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/ && tar xvf $(PACKAGE)-$(PACKAGE_VERSION)-$(host).tar
	echo build runtime-only
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/include
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/info
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/lib/cobol-it
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/lib/tcl*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/lib/tk*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/lib/libtcl*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/lib/libtk*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/samples
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/man
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/share
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/cobc
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/deet
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/iconv*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/tcl*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/wish*
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/cobmf
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/bin/citprocob
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/*.md5 
	-cd /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}` && bin/md5deep -k -l -r bin lib share > /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.md5 
	-cp /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.md5 /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/
	-chmod -w /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/`basename ${prefix}`/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.md5
	cd /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/ && tar cvf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.tar  `basename ${prefix}`
	-gzip /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).tar
	-gzip /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.tar
	mv /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.tar.gz $(PACKAGE)-$(PACKAGE_VERSION)-$(host)-runtimeonly.tar.gz 
	mv /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)/$(PACKAGE)-$(PACKAGE_VERSION)-$(host).tar.gz $(PACKAGE)-$(PACKAGE_VERSION)-$(host).tar.gz 
	rm -rf /tmp/$(PACKAGE)-$(PACKAGE_VERSION)-$(host)

cit-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy all -j 6 -k

cit-fastdeploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy allb -j 6 -k

linux-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy lin -j 6 -k

aix-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy aix -j 6

sun-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy sun -j 6

sun86-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy sun86 -j 6

hp-deploy: dist
	-rm deploy/*.tar.gz
	cp $(distdir).tar.gz deploy/
	make -C deploy hpv2 -j 6


#CIT_BEGIN_ENTERPRISE
CITVERSION=`cat version`

cit-publicbase: dist
	-rm -rf ../cobol-it-std/cobol-it*
	-rm -rf ../cobol-it-community
	-mkdir ../cobol-it-std
	cp $(distdir).tar.gz ../cobol-it-std/
	cd ../cobol-it-std/ && tar xvzf $(distdir).tar.gz
	cp makepublic.sh ../cobol-it-std/$(distdir)
	cp go-public.sh ../cobol-it-std/$(distdir)
	cp bin/patchpublic ../cobol-it-std/$(distdir)
	echo standard >../cobol-it-std/$(distdir)/distribution
	mv $(distdir) ../cobol-it-community
	cd ../cobol-it-community && sh makepublic.sh

cit-public: cit-publicbase
	cd ../cobol-it-std/$(distdir) && sh builddist.sh config

cit-publicall: cit-publicbase
	cd ../cobol-it-std/$(distdir) && sh builddist.sh allpublic

cit-public-rpm: dist $(EXTERNAL_TARS)
	cp $(EXTERNAL_TARS) /usr/src/packages/SOURCES/
	cp $(PACKAGE)-$(PACKAGE_VERSION).tar.gz /usr/src/packages/SOURCES/
	citversion=`cat version`
	citdistribution=`cat distribution`-`cat model`
	sed s/citversion/`cat version`/ <packages/rpm_standard.spec >rmp1.spec
	sed s/citdistribution/`cat distribution`-`cat model`/ <rmp1.spec >rpm_standard.spec
	rpmbuild -ba rpm_standard.spec

external/%.tar.gz: external/%.tar
	gzip $<

SUBDIRS += libcitenterprise 

#CIT_END_ENTERPRISE
SUBDIRS += cobc bin config copy  samples test

