configdir = @COB_CONFIG_DIR@
config_DATA = default.conf cobol85.conf cobol2002.conf \
	mf.conf ibm.conf mvs.conf bs2000.conf isam.conf\
	rmcobol.conf os370.conf\
	static.symb oracle.symb tuxedo.symb oraclewin.symb tuxedowin.symb \
	ingres.symb mqseries.symb staticwin.symb db2api.symb

EXTRA_DIST = $(config_DATA)
