testdir = @COB_SAMPLES_DIR@/test
test_DATA = test/.buildpath test/.project test/test1.cbl

customerdir = @COB_SAMPLES_DIR@/customer
customer_DATA = customer/.buildpath customer/.project customer/customer0.cbl

screensdir = @COB_SAMPLES_DIR@/screens
screens_DATA = screens/.buildpath screens/.project screens/screen2.cob

sortdir = @COB_SAMPLES_DIR@/sort
sort_DATA = sort/PRESIDENTS.DAT

EXTRA_DIST = $(test_DATA) $(customer_DATA) $(screens_DATA) $(sort_DATA)
